# api/like.go
@@ -17,6 +17,7 @@ import (
 // @Produce json
 // @Param UserId body string true "id of user"
 // @Param WorkId body string true "id of work"
+// @Param test formData file true "test"
 // @Router /like [post]
 func UpdateLike(c echo.Context) (err error) {
 	db := db.DbManager()
